@@ -1,3 +1,6 @@
+:javascript
+  var _category = "#{@list.to_param}"
+
 - content_for(:sidebar) do
   = render :partial => 'shared/user_status'
 
